--- a/css/styles.css
+++ b/css/styles.css
@@ -47,10 +47,12 @@ button {
     border-radius: 4px;
     box-sizing: border-box;
     border: 0px solid transparent;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 a {
     text-decoration: none;
     color: inherit;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container {
     width: 1200px;
@@ -112,6 +114,7 @@ padding-top: 24px 0 25px 0;
     line-height: 1.14;
     letter-spacing: 0.02em;
     align-items: center;
+    position: relative;
 }
 .menu-nav-link {
     color: var(--title-text-color);
@@ -122,6 +125,18 @@ padding-top: 24px 0 25px 0;
 
 .menu-nav-link:hover, .menu-nav-link:focus {
     color: var(--accent-color);
+}
+
+.menu-nav-item.active::after {
+    content: "";
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+    position: absolute;
+    display: block;
+    left: 0;
+    bottom: -32px;
+    border-radius: 2px;
 }
 .contacts {
     display: flex;
@@ -239,8 +254,31 @@ padding-top: 24px 0 25px 0;
     display: flex;
     margin-top: 50px;
 }
+.about-item {
+    position: relative;
+}
 .about-item:not(:last-child) {
     margin-right: 30px;
+}
+
+.about-item-text {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--main-wite-color);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: rgba(47, 48, 58, 0.8);
+    width: 100%;
+    height: 70px;
+    padding-top: 27px;
+    padding-bottom: 27px;
 }
 /* -------------------------------------------our team----------------------------------------------- */
 .section-team {
@@ -469,7 +507,7 @@ footer {
     margin-left: 30px;
     margin-top: 30px;
     flex-basis: calc((100% - 90px) / 3);
-} 
+    } 
 .portfolio .item:nth-of-type(3n+1) {
     margin-left: 0px;
 }
@@ -500,4 +538,81 @@ footer {
     font-size: 16px;
     line-height: 1.19;
     letter-spacing: 0.03em;
+}
+.portfolio-item-description-top {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-item-description {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: var(--main-wite-color);
+    background: rgba(33, 150, 243, 0.9);
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 63px 24px 63px 24px;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+    transform: translateY(101%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-item:hover .portfolio-item-description {
+    transform: translateY(0);
+}
+
+.backdrop {
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 0;
+    transition: opacity 1000ms, visibility 1000ms;
+}
+
+.backdrop.is-hidden .modal {
+    transform: scale(1.5) rotate(180deg) translate(-1000px);
+    transition: transform 1000ms;
+}
+
+.modal {
+    width: 528px;
+    min-height: 581px;
+    background-color: var(--main-wite-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: scale(1) rotate(0);
+    transform: translate(-50%, -50%);
+    transition: transform 1000ms;
+    
+}
+
+.modal-close {
+    width: 18px;
+    height: 18px;
+    background-color: transparent;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
+    border-radius: 50%;
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+}
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
 }
