--- a/css/styles.css
+++ b/css/styles.css
@@ -47,12 +47,11 @@ button {
     border-radius: 4px;
     box-sizing: border-box;
     border: 0px solid transparent;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 a {
     text-decoration: none;
     color: inherit;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .container {
     width: 1200px;
@@ -135,7 +134,7 @@ padding-top: 24px 0 25px 0;
     position: absolute;
     display: block;
     left: 0;
-    bottom: -32px;
+    bottom: -33px;
     border-radius: 2px;
 }
 .contacts {
@@ -158,6 +157,7 @@ padding-top: 24px 0 25px 0;
     line-height: 1.17;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
+    font-weight: 500;
 }
 
 .contact-link:hover, .contact-link:focus {
@@ -277,8 +277,9 @@ padding-top: 24px 0 25px 0;
     background: rgba(47, 48, 58, 0.8);
     width: 100%;
     height: 70px;
-    padding-top: 27px;
-    padding-bottom: 27px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 /* -------------------------------------------our team----------------------------------------------- */
 .section-team {
@@ -333,9 +334,11 @@ padding-top: 24px 0 25px 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-social-icon {
     fill: #AFB1B8;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-social-link:hover,
 .team-social-link:focus {
@@ -372,6 +375,7 @@ background: var(--accent-color);
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clint-link:hover,
 .clint-link:focus {
@@ -450,6 +454,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: fill 5000ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-network-link:hover, .social-network-link:focus {
     background: var(--accent-color);
@@ -484,6 +489,7 @@ footer {
     color: var(--title-text-color);
     background: var(--primary-br-btn-color);
     padding: 6px 22px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .primary-button:hover, .primary-button:focus {
@@ -491,7 +497,7 @@ footer {
     color: var(--main-wite-color);
     background: var(--main-br-btn-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    }
+}
 .portfolio {
     display: flex;
     flex-wrap: wrap;
@@ -519,6 +525,7 @@ footer {
 }
 .portfolio-link {
     display: block;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-link:hover, .portfolio-link:focus {
     box-sizing: border-box;
@@ -563,9 +570,11 @@ footer {
     transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-item:hover .portfolio-item-description {
-    transform: translateY(0);
+.portfolio-item:hover .portfolio-item-description, 
+.portfolio-item:focus .portfolio-item-description {
+    transform: translateY(0%);
 }
+/* -------------------------------------------modal----------------------------------------------- */
 
 .backdrop {
     width: 100vw;
@@ -573,12 +582,12 @@ footer {
     background: rgba(0, 0, 0, 0.2);
     position: fixed;
     top: 0;
-    transition: opacity 1000ms, visibility 1000ms;
+    transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1), visibility 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden .modal {
     transform: scale(1.5) rotate(180deg) translate(-1000px);
-    transition: transform 1000ms;
+    transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -592,13 +601,13 @@ footer {
     left: 50%;
     transform: scale(1) rotate(0);
     transform: translate(-50%, -50%);
-    transition: transform 1000ms;
+    transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
 .modal-close {
-    width: 18px;
-    height: 18px;
+    width: 30px;
+    height: 30px;
     background-color: transparent;
     border: 1px solid rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
@@ -610,6 +619,11 @@ footer {
     align-items: center;
     justify-content: center;
     padding: 0;
+    cursor: pointer;
+}
+.modal-close:hover, .modal-close:focus {
+    border: 1px solid var(--accent-color);
+    fill: var(--accent-color);
 }
 .is-hidden {
     visibility: hidden;
