--- a/css/styles.css
+++ b/css/styles.css
@@ -570,8 +570,8 @@ footer {
     transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-item:hover .portfolio-item-description, 
-.portfolio-item:focus .portfolio-item-description {
+.portfolio-link:hover .portfolio-item-description, 
+.portfolio-link:focus .portfolio-item-description {
     transform: translateY(0%);
 }
 /* -------------------------------------------modal----------------------------------------------- */
